--- a/index.html
+++ b/index.html
@@ -1,8 +1,17 @@
 <!DOCTYPE html>
-
+<head>
+    <link href="style.css" type="text/css" rel="stylesheet">
+  </head>
 <h1>Task Manager</h1>
 <h2>To Do List</h2>
+
+
 <body>
+    
+<form>
+	<label for="name">Name</label><br /> 
+	<input name="name" type="text" value="Frank" /> <br /> 
+</form>
 <ol>
 	<li>List Item 1</li>
 	<li>List Item 2</li>
